[package]
name = "pugl-ui"
version = "0.2.0"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"
description = "A stub for small embeddable GUI-toolkits using pugl"
license = "ISC"
keywords = ["GUI", "LV2"]
categories = ["gui"]
homepage = "https://github.com/johannes-mueller/pugl-ui"
repository = "https://github.com/johannes-mueller/pugl-ui"
readme = "README.md"

[dependencies]
cairo-rs = "0.9.0"
pango = "0.9.0"
pangocairo = "0.10.0"
downcast-rs = "1.2.0"

pugl-sys = "0.3.3"
